--- a/package.json
+++ b/package.json
@@ -31,6 +31,15 @@
     "@types/recharts": "^1.1.21",
     "@types/styled-components": "^4.4.0",
     "@types/styled-system": "^5.1.3",
+    "@vx/axis": "^0.0.198",
+    "@vx/gradient": "^0.0.198",
+    "@vx/group": "^0.0.198",
+    "@vx/legend": "^0.0.198",
+    "@vx/pattern": "^0.0.198",
+    "@vx/scale": "^0.0.198",
+    "@vx/shape": "^0.0.198",
+    "@vx/stats": "^0.0.198",
+    "@vx/tooltip": "^0.0.198",
     "humanize-string": "^2.1.0",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
