--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@types/styled-components": "^4.4.0",
     "@types/styled-system": "^5.1.3",
     "@vx/axis": "^0.0.198",
+    "@vx/event": "^0.0.199",
     "@vx/gradient": "^0.0.198",
     "@vx/group": "^0.0.198",
     "@vx/legend": "^0.0.198",
+    "@vx/mock-data": "^0.0.199",
     "@vx/pattern": "^0.0.198",
     "@vx/scale": "^0.0.198",
     "@vx/shape": "^0.0.198",
