--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@looker/components": "^0.9.13",
+    "@looker/components": "^0.9.16",
     "@looker/design-tokens": "^0.7.2",
     "@looker/extension-sdk": "^0.11.0",
     "@looker/extension-sdk-react": "^0.6.2",
@@ -41,7 +41,10 @@
     "@vx/scale": "^0.0.198",
     "@vx/shape": "^0.0.198",
     "@vx/stats": "^0.0.198",
+    "@vx/threshold": "^0.0.199",
     "@vx/tooltip": "^0.0.198",
+    "babel-loader": "^8.1.0",
+    "d3": "^5.12.0",
     "humanize-string": "^2.1.0",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
@@ -53,6 +56,7 @@
     "react-syntax-highlighter": "^11.0.2",
     "react-usa-map": "^1.5.0",
     "recharts": "^1.7.1",
+    "ssf": "^0.10.2",
     "styled-components": "^4.4.1",
     "ts-jest": "^25.3.0",
     "use-debounce": "^3.1.0",
